--- a/lx-xuecheng-system/lx-xuecheng-system-api/src/main/resources/bootstrap.yml
+++ b/lx-xuecheng-system/lx-xuecheng-system-api/src/main/resources/bootstrap.yml
@@ -1,30 +1,32 @@
-server:
-  servlet:
-    context-path: /system
-  port: 63110
-
 #微服务配置
 spring:
   application:
     name: system-api
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://192.168.101.65:3306/xcplus_system?serverTimezone=UTC&userUnicode=true&useSSL=false&
-    username: root
-    password: mysql
-
-#swagger配置
-# 日志文件配置路径
-logging:
-  config: classpath:log4j2-dev.xml
-swagger:
-  title: "数据字典查询管理系统"
-  description: "数据字典查询管理系统"
-  base-package: com.lx.system
-  enabled: true
-  version: 1.0.0
-
-
-
+  cloud:
+    nacos:
+      server-addr: 192.168.101.65:8848
+      discovery:
+        namespace: dev-lx
+        group: lx-xuecheng-project
+      config:
+        namespace: dev-lx
+        group: lx-xuecheng-project
+        file-extension: yml
+        refresh-enabled: true
+        extension-configs:
+          - data-id: system-service-${spring.profiles.active}.yml
+            group: lx-xuecheng-project
+            refresh: true
+        shared-configs:
+          - data-id: swagger-${spring.profiles.active}.yml
+            group: lx-xuecheng-common
+            refresh: true
+          - data-id: logging-${spring.profiles.active}.yml
+            group: lx-xuecheng-common
+            refresh: true
   profiles:
-    active: dev
+    active: dev-lx
+
+
+
+
