--- a/lx-xuecheng-system/lx-xuecheng-system-service/src/main/resources/bootstrap.yml
+++ b/lx-xuecheng-system/lx-xuecheng-system-service/src/main/resources/bootstrap.yml
@@ -1,13 +1,17 @@
 
-#微服务配置
 spring:
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://192.168.101.65:3306/xcplus_system?serverTimezone=UTC&userUnicode=true&useSSL=false&
-    username: root
-    password: mysql
-
-#swagger配置
-# 日志文件配置路径
-logging:
-  config: classpath:log4j2-dev.xml
+  application:
+    name: system-service
+  cloud:
+    nacos:
+      server-addr: 192.168.101.65:8848
+      discovery:
+        namespace: dev-lx
+        group: lx-xuecheng-project
+      config:
+        namespace: dev-lx
+        group: lx-xuecheng-project
+        file-extension: yml
+        refresh-enabled: true
+  profiles:
+    active: dev-lx
