增加媒资管理服务，包括ffmpegpath转码，以及xxl-job任务调度

--- a/lx-xuecheng-media/lx-xuecheng-media-service/pom.xml
+++ b/lx-xuecheng-media/lx-xuecheng-media-service/pom.xml
@@ -61,6 +61,7 @@
             <artifactId>spring-boot-starter-log4j2</artifactId>
         </dependency>
 
+<!--        集成minio -->
         <dependency>
             <groupId>io.minio</groupId>
             <artifactId>minio</artifactId>
@@ -70,6 +71,11 @@
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
             <version>4.8.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.xuxueli</groupId>
+            <artifactId>xxl-job-core</artifactId>
         </dependency>
     </dependencies>
 
