--- a/lx-xuecheng-content/lx-xuecheng-content-api/pom.xml
+++ b/lx-xuecheng-content/lx-xuecheng-content-api/pom.xml
@@ -19,6 +19,11 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-freemarker</artifactId>
+        </dependency>
+
         <!--cloud的基础环境包-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
