--- a/lx-xuecheng-content/lx-xuecheng-content-api/src/main/resources/bootstrap.yml
+++ b/lx-xuecheng-content/lx-xuecheng-content-api/src/main/resources/bootstrap.yml
@@ -23,5 +23,8 @@ spring:
           - data-id: logging-${spring.profiles.active}.yml
             group: lx-xuecheng-common
             refresh: true
+          - data-id: freemarker-config-${spring.profiles.active}.yml
+            group: lx-xuecheng-common
+            refresh: true
   profiles:
     active: dev-lx
