课程发布接口静态页面的获取，es课程索引，搜索

--- a/lx-xuecheng-content/lx-xuecheng-content-api/src/main/resources/bootstrap.yml
+++ b/lx-xuecheng-content/lx-xuecheng-content-api/src/main/resources/bootstrap.yml
@@ -26,5 +26,8 @@ spring:
           - data-id: freemarker-config-${spring.profiles.active}.yml
             group: lx-xuecheng-common
             refresh: true
+          - data-id: feign-${spring.profiles.active}.yml
+            group: lx-xuecheng-common
+            refresh: true
   profiles:
     active: dev-lx
