--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
         <module>lx-xuecheng-system</module>
         <module>lx-xuecheng-gateway</module>
         <module>lx-xuecheng-media</module>
+        <module>lx-xuecheng-message-sdk</module>
+        <module>lx-xuecheng-search</module>
     </modules>
     <name>lx-xuecheng</name>
     <description>lx-xuecheng</description>
