--- a/lx-xuecheng-content/lx-xuecheng-content-service/src/main/resources/bootstrap.yml
+++ b/lx-xuecheng-content/lx-xuecheng-content-service/src/main/resources/bootstrap.yml
@@ -15,6 +15,11 @@ spring:
         group: lx-xuecheng-project
         file-extension: yml
         refresh-enabled: true
+        shared-configs:
+          - data-id: feign-${spring.profiles.active}.yml
+            group: lx-xuecheng-common
+            refresh: true
+
   profiles:
     active: dev-lx
 
