--- a/lx-xuecheng-content/lx-xuecheng-content-api/pom.xml
+++ b/lx-xuecheng-content/lx-xuecheng-content-api/pom.xml
@@ -12,6 +12,15 @@
     <artifactId>lx-xuecheng-content-api</artifactId>
 
     <dependencies>
+        <!--认证相关-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-oauth2</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.lx</groupId>
