--- a/lx-xuecheng-gateway/pom.xml
+++ b/lx-xuecheng-gateway/pom.xml
@@ -12,6 +12,14 @@
     <artifactId>lx-xuecheng-gateway</artifactId>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-oauth2</artifactId>
+        </dependency>
 
         <!--网关-->
         <dependency>
