实现认证，授权服务

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>lx-xuecheng-search</module>
         <module>lx-xuecheng-auth</module>
         <module>lx-xuecheng-checkcode</module>
+        <module>lx-xuecheng-learning</module>
     </modules>
     <name>lx-xuecheng</name>
     <description>lx-xuecheng</description>
