--- a/lx-xuecheng-learning/pom.xml
+++ b/lx-xuecheng-learning/pom.xml
@@ -9,7 +9,11 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>untitled</artifactId>
+    <artifactId>lx-xuecheng-learning</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>lx-xuecheng-api</module>
+    </modules>
 
 
 </project>
