--- a/lx-xuecheng-orders/pom.xml
+++ b/lx-xuecheng-orders/pom.xml
@@ -3,13 +3,19 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>lx-xuecheng-learning</artifactId>
+        <artifactId>lx-xuecheng</artifactId>
         <groupId>com.lx</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>lx-xuecheng-api</artifactId>
+    <artifactId>lx-xuecheng-orders</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>lx-xuecheng-orders-api</module>
+        <module>lx-xuecheng-orders-model</module>
+        <module>lx-xuecheng-orders-service</module>
+    </modules>
 
 
 </project>
