在线学习平台

--- a/lx-xuecheng-content/lx-xuecheng-content-api/src/main/resources/bootstrap.yml
+++ b/lx-xuecheng-content/lx-xuecheng-content-api/src/main/resources/bootstrap.yml
@@ -29,5 +29,8 @@ spring:
           - data-id: feign-${spring.profiles.active}.yml
             group: lx-xuecheng-common
             refresh: true
+          - data-di: redis-${spring.profiles.active}.yml
+            group: lx-xuecheng-common
+            refresh: true
   profiles:
     active: dev-lx
